updating minicart and header

--- a/styles/css/header/vtex.rich-text.css
+++ b/styles/css/header/vtex.rich-text.css
@@ -1,4 +1,4 @@
-.lh-copy.vtex-rich-text-0-x-paragraph {
+.paragraph--header__top-paragraph {
     color: #fff;
     margin: 5px 10px;
     font-weight: 500;
