--- a/styles/css/home/vtex.store-components.css
+++ b/styles/css/home/vtex.store-components.css
@@ -30,3 +30,21 @@ height: 20;
     max-width: none;
     margin: 0 3em 3em;
 }
+
+
+.section__eigth-container{
+align-items: center;
+    border: 1px solid #eae8e8;
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.flexRowContent--group__container{
+align-items: center;
+    border: 1px solid #eae8e8;
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 10px;
+    padding-top: 10px;}
