--- a/styles/css/footer/vtex.rich-text.css
+++ b/styles/css/footer/vtex.rich-text.css
@@ -16,6 +16,7 @@
     font-size: 14px;
     font-weight: 500;
     margin: 0;
+    text-decoration: none;
 }
 
 .paragraph--subgroup__text-information-sub{
@@ -61,4 +62,56 @@
     .paragraph--rights{
      color: #4d5766;
     font-size: 13px;
+    }
+
+    .paragraph--principal-text{
+        font-size: 17px;
+        font-weight: 600;
+        color: #5a5a5a;
+        margin-right: 7px;
+    }
+
+    .paragraph--secondary-text{
+        font-size: 17px;
+        font-weight: 600;
+        color: #5a5a5a;
+        margin-right: 7px;
+    }
+
+    :global(.vtex-rich-text-0-x-link) {
+        color: #636e74 !important;
+        text-decoration: none;
+    }
+
+    :global(.vtex-rich-text-0-x-link):hover {
+        color: #5a5a5a !important;
+        text-decoration: underline;
+        font-weight: 700;
+        line-height: 15px;
+        overflow: hidden;
+        
+    }
+
+    .wrapper--principal-text{
+    margin: auto;
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    margin-bottom: -1px;
+    z-index: 2;
+    background: #fff;
+    border: 1px solid #ffffff;
+    border-bottom: none;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding: 4px 20px;
+    font-size: 13px;
+    font-weight: 600;
+    }
+
+    .container--principal-text{
+        display: flex;
+        width: 80%;
+        justify-content: flex-start;
     }
