changes in footer, and adding styles

--- a/styles/css/footer/vtex.disclosure-layout.css
+++ b/styles/css/footer/vtex.disclosure-layout.css
@@ -3,6 +3,7 @@
     border-color: transparent;
     padding: 0;
     border: 0;
+    margin-bottom: 0;
 }
 .flexRowContent--disclosure__content-information {
     background-color: #fff;
