--- a/styles/css/static/vtex.flex-layout.css
+++ b/styles/css/static/vtex.flex-layout.css
@@ -2,3 +2,36 @@
    max-width: 83.33%;
    margin: 0 auto;
 }
+.flexRow--category__content{
+   max-width: 83.3%;
+   margin: 0 auto;
+   font-family: 'Cabin' !important;
+
+}
+
+.flexRow--paragraph__content{
+   max-width: 83.3%;
+   margin: 20px auto;
+   word-wrap: break-word;
+   background-color: #fff;
+   background-clip: border-box;
+   border: 1px solid rgba(0,0,0,.125);
+   border-radius: 0.25rem;
+}
+
+
+.flexRowContent--link__content{
+   max-width: 83.3%;
+   background-color: #fff;
+   margin: 0 auto;
+   font-family: 'Cabin' !important;
+}
+
+.flexCol--link__content-onecol{
+   border: solid 1px #eae5ea;
+   animation-name: fadeIn;
+}
+
+.flexRowContent--link__content {
+   margin: 10px auto;
+}
