--- a/styles/configs/font-faces.css
+++ b/styles/configs/font-faces.css
@@ -1,5 +1,5 @@
 @font-face {
     font-family: 'Cabin';
     src: url(assets/fonts/Cabin-Regular.ttf), url(assets/fonts/Cabin-Medium.ttf);
-    font-weight: bold;
+    font-weight: 700;
   }
