--- a/styles/css/home/itglobers.bullets-diagramation.css
+++ b/styles/css/home/itglobers.bullets-diagramation.css
@@ -1,8 +1,9 @@
 .bullet__item{
     background-color: #efefef;
-    max-width: 1280px;
+    max-width: 100%;
     display: flex;
     justify-content:center;
     flex-direction: column;
     align-items: center;
 }
+
