--- a/styles/css/footer/vtex.disclosure-layout.css
+++ b/styles/css/footer/vtex.disclosure-layout.css
@@ -24,3 +24,12 @@
     max-height: 500px;
     transition: max-height .25s ease-in;
 }
+
+
+/* <---------mobile styles---------------> */
+
+@media screen and (max-width: 487px){
+
+
+    
+}
