--- a/styles/css/footer/vtex.rich-text.css
+++ b/styles/css/footer/vtex.rich-text.css
@@ -78,6 +78,7 @@
     .paragraph--rights{
      color: #4d5766;
     font-size: 13px;
+    margin: auto 50px;
     }
 
     .paragraph--principal-text{
@@ -104,8 +105,6 @@
     justify-content: center;
     margin-bottom: -1px;
     z-index: 2;
-    background: #fff;
-    border: 1px solid #ffffff;
     border-bottom: none;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -119,3 +118,14 @@
         width: 80%;
         justify-content: flex-start;
     }
+
+
+/* <---------mobile styles---------------> */
+
+@media screen and (max-width: 487px){
+
+    .paragraph--group__desktop-title{
+        margin: 0;
+    }
+
+}
